# indicium_fai_challenge

./: .env.example  .env.template  .gitignore  PROJECT_DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  workflow.mmd
app/: __init__.py
app/agents/: __init__.py  data_specialist.py  graph.py  news_curator.py  nodes.py  report_designer.py  state.py  states.py
app/config/: __init__.py  settings.py
app/core/: config.py
app/models/: __init__.py  llms.py
app/prompts/: column_mapping_human.txt  column_mapping_system.txt  news_curation_human.txt  news_curation_system.txt  topic_expansion_human.txt  topic_expansion_system.txt
app/templates/: report_template.html
app/tests/: test_clean_tool.py  test_news_tools.py  test_validate_tool.py  test_workflow_execution.py
app/tools/: __init__.py  data_tools.py  datasus.py  metrics.py  news_tools.py  report.py  report_tools.py  scraper.py
app/utils/: __init__.py  logging.py  prompts.py
app/workflows/: __init__.py  main_workflow.py
