[tool.poetry]
name = "indicium-health-report"
version = "0.1.0"
description = "AI-powered public health reporting system for Indicium HealthCare Inc."
authors = ["Antigravity <antigravity@gemini.google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langgraph = "^0.0.10"
langchain-openai = "^0.0.5"
langchain-google-vertexai = "^0.0.5"
langchain-community = "^0.0.10"
pandas = "^2.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
weasyprint = "^61.0"
matplotlib = "^3.8.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
